--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
-h1 {
-    border: 4px solid black;
+.button {
+    background-color: #819b57;
+    border: 2px solid #819b57;
+    border-radius: 8px;
+    padding: 16px 32px;
+    color:  #FAF4EA;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    cursor: pointer;
+}
+.button:hover {
+    background-color: transparent;
+    color: #465929;
 }
