--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,6 @@ ul {
     background-color: var(--color-brand-light);
     color: var(--color-primary-light);
 }
-.section_title {
-    color: var(--color-primary-dark);
-}
+ .section_title .accent {
+    color: var(--color-brand-dark);
+} 
