--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,57 @@
 :root {
-    --color-primary-dark: #31261A;
-    --color-primary-light: #FAF4EA;
-    --color-brand-dark: #465929;
-    --color-brand-light: #819b57;
+  --color-primary-dark: #31261a;
+  --color-primary-light: #faf4ea;
+  --color-brand-dark: #465929;
+  --color-brand-light: #819b57;
 }
 /* Base */
 body {
-    color: var(--color-primary-dark);
+  color: var(--color-primary-dark);
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
 }
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 /* Button */
 .button {
-    background-color: var(--color-brand-light);
-    border: 2px solid var(--color-brand-light);
-    border-radius: 8px;
-    padding: 16px 32px;
-    color:  #FAF4EA;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    cursor: pointer;
+  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-light);
+  border-radius: 8px;
+  padding: 16px 32px;
+  color: #faf4ea;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  cursor: pointer;
 }
 .button:hover {
-    background-color: transparent;
-    color:var(--color-brand-dark);
+  background-color: transparent;
+  color: var(--color-brand-dark);
 }
 /* Link */
 .link {
-    color: var(--color-primary-light);
+  color: var(--color-primary-light);
+  text-decoration: none;
+  font-size: 18px;
 }
 
 .link:hover {
-    color: var(--color-brand-light);
+  color: var(--color-brand-light);
 }
 /* Hero section */
 .hero_title {
-    color: var(--color-primary-light);
+  color: var(--color-primary-light);
 }
 .hero_title .accent {
-    color: var(--color-brand-light);
+  color: var(--color-brand-light);
 }
 /* Advaneges section */
 .advantages_list {
-    background-color: var(--color-brand-light);
-    color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+  color: var(--color-primary-light);
 }
- .section_title .accent {
-    color: var(--color-brand-dark);
-} 
+.section_title .accent {
+  color: var(--color-brand-dark);
+}
