--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,12 @@ address {
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
+}
+.center {
+  text-align: center;
 }
 .section {
   padding: 48px 0;
@@ -111,8 +116,31 @@ ul {
 
 .link:hover {
   color: var(--color-brand-light);
-  font-weight: 600;
 }
+
+/* Header */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
 /* Hero section */
 .hero_section {
   padding: 272px 0;
@@ -127,13 +155,19 @@ ul {
   color: var(--color-brand-light);
 }
 /* Advaneges section */
-.advantages_list {
+.advantages-section {
+  padding: 16px 0;
   background-color: var(--color-brand-light);
-  color: var(--color-primary-light);
+}
+.advantages_list {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
 .advantages_item {
   font-weight: 300;
   font-size: 20px;
+  color: var(--color-primary-light);
 }
 
 .section_title {
@@ -152,6 +186,16 @@ ul {
   padding-top: 96px;
 }
 
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+
 .traditions-title {
   margin-bottom: 42px;
 }
@@ -162,6 +206,10 @@ ul {
 
 .traditions_text .uppercase {
   text-transform: uppercase;
+}
+
+.traditions_text.limited {
+  max-width: 340px;
 }
 
 /* chef section */
@@ -176,6 +224,22 @@ ul {
 
 /* format sections */
 
+.formats-list {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.formats-item {
+  flex-basis: calc((96%) / 3);
+}
+
+.format-card {
+  padding: 24px;
+  border: 1px solid #819b57; /* remove*/
+  border-radius: 16px;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
@@ -184,9 +248,7 @@ ul {
   font-size: 24px;
   font-weight: 600;
 }
-.center {
-  text-align: center;
-}
+
 .format_text {
   font-size: 14px;
   font-weight: 300;
