--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ ul {
   padding: 0;
   fill: var(--color-primary-dark);
   background-color: transparent;
-  border: none;
+  border: 1px solid var(--color-primary-dark);
   border-radius: 50%;
   cursor: pointer;
 }
