--- a/css/style.css
+++ b/css/style.css
@@ -239,10 +239,14 @@ ul {
 .chefs-title::after {
   position: absolute;
   content: '';
-  display: block;
+  /* display: block; */
   width: 352px;
   border: 2px solid var(--color-brand-light);
-  bottom: 20px;
+  bottom: 24px;
+}
+
+.chefs-title::before {
+  left: 0;
 }
 
 .chefs-title::after {
