--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ ul {
   font-weight: 600;
   line-height: normal;
   cursor: pointer;
+  transition: color 0.3s, background-color 0.3s;
 }
 .button:hover {
   background-color: transparent;
@@ -119,8 +120,7 @@ ul {
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
-  font-size: 18px;
-  line-height: 1.5;
+  transition: color 0.3s;
 }
 
 .link:hover {
@@ -128,6 +128,14 @@ ul {
 }
 
 /* Header */
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
+}
 
 .header-container {
   display: flex;
@@ -153,7 +161,13 @@ ul {
 /* Hero section */
 .hero_section {
   padding: 272px 0;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -317,6 +331,11 @@ ul {
   padding: 24px;
   border: 1px solid #819b57; /* remove*/
   border-radius: 16px;
+  transition: transform 0.3s;
+}
+
+.format-card:hover {
+  transform: scale(1.05);
 }
 
 .formats-title {
@@ -355,6 +374,10 @@ ul {
   fill: var(--color-primary-light);
 }
 
+.carusel-button.next {
+  transform: rotate(180deg);
+}
+
 /* Contact section */
 
 .contact-sections {
@@ -363,6 +386,7 @@ ul {
 
 .contact-container {
   display: flex;
+  gap: 20px;
 }
 
 .contact-map {
@@ -455,6 +479,7 @@ ul {
 
 .backdrop {
   position: fixed;
+  padding: 20px 0;
   top: 0;
   left: 0;
   right: 0;
@@ -463,6 +488,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .backdrop.is-hidden {
@@ -473,10 +499,14 @@ ul {
 
 .modal {
   position: relative;
-  width: 780px;
-  height: 780px;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
+  padding: 128px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
+  overflow-y: auto;
 }
 
 .modal-btn-close {
@@ -486,4 +516,57 @@ ul {
   border: none;
   background: none;
   cursor: pointer;
+}
+
+/* form */
+
+.form-field {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.form-label {
+  top: 16px;
+  left: 42px;
+  position: absolute;
+}
+
+.form-input {
+  padding: 16px 42px;
+  width: 100%;
+  font-size: 16px;
+  line-height: 1.17;
+  border: 1px solid var(--color-secondary-dark);
+  border-radius: 8px;
+  background-color: transparent;
+}
+
+.form-input:focus {
+  outline: none;
+  border-color: var(--color-brand-normal);
+}
+
+.form-input::placeholder {
+  color: var(--color-secondary-dark);
+  font-size: 16px;
+  line-height: 1.17;
+}
+
+.form-input:focus::placeholder {
+  color: var(--color-primary-dark);
+}
+
+.form-button {
+  display: block;
+  margin: 0 auto 24px;
+}
+
+.form-terms {
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.form-terms-link {
+  color: var(--color-primary-dark);
+  text-underline-offset: 2px;
 }
