--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,14 @@
 @import './utils/utils';
 @import './components/buttons';
 @import './components/links';
+@import './components/header';
+@import './components/hero';
+@import './components/advantages';
+@import './components/traditions';
+@import './components/chef';
+@import './components/formats';
+@import './components/carusel';
+@import './components/contacts';
 
 .container {
   width: 100%;
@@ -12,279 +20,6 @@
   margin: 0 auto;
   padding: 0 24px;
 }
-
-/* Header */
-
-.header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding-top: 32px;
-  .header-container {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-}
-
-.header-nav {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  gap: 40px;
-}
-
-.header-menu {
-  display: flex;
-  align-items: center;
-  gap: 64px;
-  flex-grow: 1;
-  justify-content: center;
-}
-
-/* Hero section */
-.hero_section {
-  padding: 272px 0;
-  background-image: linear-gradient(
-      102.76deg,
-      rgba(18, 18, 17, 0.78) 2.03%,
-      rgba(18, 18, 17, 0.6) 58.46%,
-      rgba(18, 18, 17, 0) 90.36%
-    ),
-    url(../images/hero-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover;
-}
-.hero_title {
-  color: var(--color-primary-light);
-  font-size: 128px;
-  font-weight: 900;
-  margin-bottom: 0;
-}
-.hero_title .accent {
-  color: var(--color-brand-normal);
-}
-/* Advaneges section */
-.advantages-section {
-  padding: 16px 0;
-  background-color: var(--color-brand-normal);
-}
-.advantages_list {
-  display: flex;
-  justify-content: space-between;
-  gap: 30px;
-}
-.advantages_item {
-  font-weight: 300;
-  font-size: 20px;
-  color: var(--color-primary-light);
-}
-
-.section_title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section_title .accent {
-  color: var(--color-brand-dark);
-  font-weight: 600;
-}
-
-/* traditions section */
-.traditions-section {
-  padding-top: 96px;
-}
-
-.traditions-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-
-.traditions-content {
-  max-width: 710px;
-}
-
-.traditions-title {
-  margin-bottom: 42px;
-}
-
-.traditions_text .brand {
-  color: var(--color-brand-normal);
-}
-
-.traditions_text .uppercase {
-  text-transform: uppercase;
-}
-
-.traditions_text.limited {
-  max-width: 340px;
-}
-.baker-photo {
-  border-radius: 400px 400px 4px 4px;
-}
-
-/* chef section */
-
-.chefs-title {
-  margin-bottom: 80px;
-  position: relative;
-}
-
-.chefs-title::before,
-.chefs-title::after {
-  position: absolute;
-  content: '';
-  /* display: block; */
-  width: 352px;
-  border: 2px solid var(--color-brand-light);
-  bottom: 24px;
-}
-
-.chefs-title::before {
-  left: 0;
-}
-
-.chefs-title::after {
-  right: 0;
-}
-
-.chefs-list {
-  display: flex;
-  gap: 40px 30px;
-  flex-wrap: wrap;
-}
-
-.chefs-item {
-  flex-basis: calc((100% - 30px) / 2);
-}
-
-.chef-card {
-  display: flex;
-  gap: 30px;
-}
-
-.chef-photo {
-  border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0 0 var(--color-primary-light),
-    -16px 16px 0 2px var(--color-secondary-dark);
-}
-
-.chef_title {
-  margin-bottom: 16px;
-  font-size: 40px;
-  font-weight: 600;
-}
-
-.chef-text p:last-child {
-  margin-bottom: 0;
-}
-
-.chef-text p {
-  margin-bottom: 24px;
-}
-
-/* format sections */
-
-.formats-container {
-  display: flex;
-  align-items: center;
-  gap: 32px;
-}
-
-.formats-list {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-.formats-item {
-  flex-basis: calc((96%) / 3);
-}
-
-.format-card {
-  height: 444px;
-  background: linear-gradient(
-    180deg,
-    rgba(49, 38, 26, 0) 55.21%,
-    rgba(49, 38, 26, 0.71) 72.92%,
-    var(--color-primary-dark) 100%
-  );
-  padding: 24px;
-  border: 1px solid #819b57; /* remove*/
-  border-radius: 16px;
-  transition: transform 0.3s;
-}
-
-.format-card:hover {
-  transform: scale(1.05);
-}
-
-.formats-title {
-  margin-bottom: 80px;
-}
-
-.format_title {
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.format_text {
-  font-size: 14px;
-  font-weight: 300;
-}
-
-/* Carousel */
-
-.carusel-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 44px;
-  height: 44px;
-  padding: 0;
-  fill: var(--color-primary-dark);
-  background-color: transparent;
-  border: 1px solid var(--color-primary-dark);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.carusel-button:hover {
-  background-color: var(--color-primary-dark);
-  fill: var(--color-primary-light);
-}
-
-.carusel-button.next {
-  transform: rotate(180deg);
-}
-
-/* Contact section */
-
-.contact-sections {
-  padding-bottom: 96px;
-}
-
-.contact-container {
-  display: flex;
-  gap: 20px;
-}
-
-.contact-map {
-  flex-shrink: 0;
-  border-radius: 16px;
-  border: none;
-}
-
-.contact-title {
-  margin-bottom: 16px;
-}
-
-/* Footer */
 
 .footer-container {
   display: flex;
