--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,4 +1,4 @@
-.hero_section {
+.hero-section {
   padding: 272px 0;
   background-image: linear-gradient(
       102.76deg,
@@ -10,13 +10,10 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-}
-.hero_title {
-  color: var(--color-primary-light);
-  font-size: 128px;
-  font-weight: 900;
-  margin-bottom: 0;
-}
-.hero_title .accent {
-  color: var(--color-brand-normal);
+  &__title {
+    color: var(--color-primary-light);
+    font-size: 128px;
+    font-weight: 900;
+    margin-bottom: 0;
+  }
 }
