--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,8 +10,8 @@
 @import './layouts/advantages';
 @import './layouts/traditions';
 @import './layouts/section';
-@import './components/chef';
-@import './components/formats';
+@import './layouts/chef';
+@import './layouts/formats';
 @import './components/carusel';
 @import './components/contacts';
 @import './utils/texts';
