--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -1,14 +1,8 @@
 .section {
   padding: 48px 0;
-}
-
-.section_title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section_title .accent {
-  color: var(--color-brand-dark);
-  font-weight: 600;
+  &__title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+  }
 }
