--- a/scss/layouts/_formats.scss
+++ b/scss/layouts/_formats.scss
@@ -1,17 +1,17 @@
-.formats-container {
+.formats-section {
   display: flex;
   align-items: center;
   gap: 32px;
-}
 
-.formats-list {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-}
+  &__list {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
 
-.formats-item {
-  flex-basis: calc((96%) / 3);
+  &__item {
+    flex-basis: calc((96%) / 3);
+  }
 }
 
 .format-card {
@@ -29,31 +29,31 @@
   padding: 24px;
   border-radius: 16px;
   transition: transform 0.3s;
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  &__text {
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--color-primary-light);
+  }
+  &__title {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-primary-light);
+  margin-bottom: 80px;
+}
 }
 
 .format-card:hover {
   transform: scale(1.05);
 }
-.format-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-.formats-title {
-  margin-bottom: 80px;
-}
 
-.format_title {
-  font-size: 24px;
-  font-weight: 600;
-  color: var(--color-primary-light);
-}
-
-.format_text {
-  font-size: 14px;
-  font-weight: 300;
-  color: var(--color-primary-light);
-}
+.format-card
