--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@
 @import './layouts/formats';
 @import './layouts/forms';
 @import './components/carusel';
-@import './layouts/contacts';
+@import './components/contacts';
 @import './utils/texts';
 
 .container {
