--- a/scss/layouts/_contacts.scss
+++ b/scss/layouts/_contacts.scss
@@ -1,9 +1,9 @@
-.contact-sections {
+.contact-section {
   padding-bottom: 96px;
 
   &__container {
     display: flex;
-    gap: 20px;
+    gap: 32px;
   }
 
   &__map {
