--- a/scss/layouts/_formats.scss
+++ b/scss/layouts/_formats.scss
@@ -1,16 +1,18 @@
 .formats-section {
-  display: flex;
-  align-items: center;
-  gap: 32px;
+  &__container {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+  }
 
   &__list {
     display: flex;
-    gap: 20px;
+    gap: 15px;
     flex-wrap: wrap;
   }
 
   &__item {
-    flex-basis: calc((96%) / 3);
+    flex-basis: calc((97%) / 3);
   }
 }
 
@@ -29,6 +31,11 @@
   padding: 24px;
   border-radius: 16px;
   transition: transform 0.3s;
+  overflow: hidden;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   &__image {
     position: absolute;
@@ -45,15 +52,9 @@
     color: var(--color-primary-light);
   }
   &__title {
-  font-size: 24px;
-  font-weight: 600;
-  color: var(--color-primary-light);
-  margin-bottom: 80px;
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--color-primary-light);
+    margin-bottom: 80px;
+  }
 }
-}
-
-.format-card:hover {
-  transform: scale(1.05);
-}
-
-.format-card
