--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -23,5 +23,14 @@
     gap: 64px;
     flex-grow: 1;
     justify-content: center;
+
+    @media screen and (max-width: 1198.98px) {
+      display: none;
+    }
+  }
+  &__button {
+    @media screen and (max-width: 1198.98px) {
+      display: none;
+    }
   }
 }
