--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -18,18 +18,24 @@
   }
 
   &__menu {
-    display: flex;
-    align-items: center;
-    gap: 64px;
-    flex-grow: 1;
-    justify-content: center;
+    display: none;
 
-    @media screen and (max-width: 1198.98px) {
-      display: none;
+    @media screen and (min-width: &bp-desktop) {
+      display: flex;
+      align-items: center;
+      gap: 64px;
+      flex-grow: 1;
+      justify-content: center;
     }
   }
   &__button {
-    @media screen and (max-width: 1198.98px) {
+    display: none;
+    @media screen and (min-width: &bp-desktop) {
+      display: block;
+    }
+  }
+  &__burger {
+    @media screen and (min-width: &bp-desktop) {
       display: none;
     }
   }
