--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -12,8 +12,14 @@
   background-size: cover;
   &__title {
     color: var(--color-primary-light);
-    font-size: 128px;
+    font-size: 67px;
     font-weight: 900;
     margin-bottom: 0;
+    line-height: 1;
+
+    @media screen and (min-width: &bp-tablet) {
+      font-size: 128px;
+      line-height: 1.5;
+    }
   }
 }
