--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -20,7 +20,7 @@
   &__menu {
     display: none;
 
-    @media screen and (min-width: &bp-desktop) {
+    @media screen and (min-width: $bp-desktop) {
       display: flex;
       align-items: center;
       gap: 64px;
@@ -30,12 +30,19 @@
   }
   &__button {
     display: none;
-    @media screen and (min-width: &bp-desktop) {
+    @media screen and (min-width: $bp-desktop) {
       display: block;
     }
   }
   &__burger {
-    @media screen and (min-width: &bp-desktop) {
+    background-color: transparent;
+    border: none;
+    fill: var(--color-primary-light);
+    width: 24px;
+    height: 24px;
+    padding: 0;
+
+    @media screen and (min-width: $bp-desktop) {
       display: none;
     }
   }
