--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -17,7 +17,7 @@
     margin-bottom: 0;
     line-height: 1;
 
-    @media screen and (min-width: &bp-tablet) {
+    @media screen and (min-width: $bp-tablet) {
       font-size: 128px;
       line-height: 1.5;
     }
