--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -7,6 +7,6 @@
   --color-brand-light: #cfcfbc;
 }
 
-&bp-mobile: 480px;
-&bp-tablet: 768px;
-&bp-desktop: 1280px;
+$bp-mobile: 480px;
+$bp-tablet: 768px;
+$bp-desktop: 1280px;
