--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,5 +1,6 @@
 /* Button */
 .button {
+  display: block;
   background-color: var(--color-brand-normal);
   border: 2px solid var(--color-brand-normal);
   border-radius: 8px;
