--- a/scss/layouts/_advantages.scss
+++ b/scss/layouts/_advantages.scss
@@ -1,14 +1,32 @@
 .advantages-section {
   padding: 16px 0;
-  background-color: var(--color-brand-normal);
+
+  @media screen and (min-width: $bp-tablet) {
+    background-color: var(--color-brand-normal);
+  }
   &__list {
     display: flex;
-    justify-content: space-between;
-    gap: 30px;
+    flex-direction: column;
+    gap: 16px;
+    padding: 24px 40px;
+    background-color: var(--color-brand-light);
+    border-radius: 24px;
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 30px;
+      background-color: transparent;
+      border-radius: 0;
+      padding: 0;
+    }
   }
   &__item {
     font-weight: 300;
-    font-size: 20px;
-    color: var(--color-primary-light);
+    font-size: 14px;
+    @media screen and (min-width: $bp-tablet) {
+      color: var(--color-primary-light);
+      font-size: 20px;
+    }
   }
 }
