--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image: linear-gradient(
       102.76deg,
       rgba(18, 18, 17, 0.78) 2.03%,
@@ -10,16 +10,27 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+  @media screen and (min-width: $bp-desktop) {
+    padding: 272px 0;
+  }
   &__title {
+    margin-bottom: 48px;
     color: var(--color-primary-light);
     font-size: 67px;
     font-weight: 900;
-    margin-bottom: 0;
+
     line-height: 1;
 
-    @media screen and (min-width: $bp-tablet) {
+    @media screen and (min-width: $bp-desktop) {
       font-size: 128px;
       line-height: 1.5;
+      margin-bottom: 0;
+    }
+  }
+  &__button {
+    margin: 0 auto;
+    @media screen and (min-width: $bp-desktop) {
+      display: none;
     }
   }
 }
