--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,8 @@
 @import './layouts/contacts';
 @import './layouts/formats';
 @import './layouts/forms';
+@import './layouts/mobile-menu';
+@import './layouts/modal.scss';
 
 .container {
   width: 100%;
@@ -100,47 +102,4 @@
 .address_copyright {
   font-size: 14px;
   color: #a18268;
-}
-
-/* Modal */
-
-.backdrop {
-  position: fixed;
-  padding: 20px 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: opacity 0.3s, visibility 0.3s;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.modal {
-  position: relative;
-  width: 100%;
-  max-width: 880px;
-  height: 100%;
-  max-height: 880px;
-  padding: 128px;
-  background-color: var(--color-primary-light);
-  border-radius: 32px;
-  overflow-y: auto;
-}
-
-.modal-btn-close {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  border: none;
-  background: none;
-  cursor: pointer;
 }
