--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -6,9 +6,9 @@
     font-weight: 900;
     line-height: 1.5;
 
-    @media screen and (min-width: $bp-tablet) {
-      font-size: 64px;
-      line-height: 1.3;
-    }
+    // @media screen and (min-width: $bp-tablet) {
+    //   font-size: 64px;
+    //   line-height: 1.3;
+    // }
   }
 }
