--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -5,10 +5,9 @@
     font-size: 32px;
     font-weight: 900;
     line-height: 1.5;
-
-    // @media screen and (min-width: $bp-tablet) {
-    //   font-size: 64px;
-    //   line-height: 1.3;
-    // }
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 64px;
+      line-height: 1.3;
+    }
   }
 }
