--- a/scss/layouts/_traditions.scss
+++ b/scss/layouts/_traditions.scss
@@ -12,7 +12,15 @@
 
   &__title {
     margin-bottom: 42px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.5;
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 64px;
+      line-height: 1.3;
+    }
   }
+
   &__text {
     &--limited {
       max-width: 340px;
