--- a/scss/layouts/_traditions.scss
+++ b/scss/layouts/_traditions.scss
@@ -23,7 +23,7 @@
     display: none;
     border-radius: 400px 400px 4px 4px;
 
-    @media screen and (min-width: $bp-tablet) {
+    @media screen and (min-width: 768px) {
       display: block;
     }
   }
