--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -1,7 +1,7 @@
 .section {
   padding: 20px 0;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $bp-tablet) {
     padding: 48px 0;
   }
 
@@ -10,7 +10,7 @@
     font-weight: 900;
     line-height: 1.5;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-tablet) {
       font-size: 64px;
       line-height: 1.3;
     }
