--- a/scss/layouts/_traditions.scss
+++ b/scss/layouts/_traditions.scss
@@ -19,12 +19,12 @@
       max-width: 340px;
     }
   }
-  &__images {
+  &__images .baker-man {
     display: none;
-    border-radius: 400px 400px 4px 4px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-tablet) {
       display: block;
+      border-radius: 400px 400px 4px 4px;
     }
   }
 }
