--- a/scss/layouts/_formats.scss
+++ b/scss/layouts/_formats.scss
@@ -1,18 +1,22 @@
 .formats-section {
-  &__container {
+  &__slider {
     display: flex;
     align-items: center;
     gap: 32px;
   }
 
-  &__list {
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
+  &__container {
+    overflow: hidden;
   }
+  &__list {
+    margin-bottom: 32px;
+  }
+  &__button {
+    display: none;
 
-  &__item {
-    flex-basis: calc((97%) / 3);
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
+    }
   }
 }
 
@@ -30,12 +34,7 @@
   );
   padding: 24px;
   border-radius: 16px;
-  transition: transform 0.3s;
   overflow: hidden;
-
-  &:hover {
-    transform: scale(1.05);
-  }
 
   &__image {
     position: absolute;
