--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import './components/carusel';
 @import './components/chef-card';
 @import './components/links';
+@import './components/pagination';
 
 @import './layouts/advantages';
 @import './layouts/chef';
