--- a/scss/layouts/_contacts.scss
+++ b/scss/layouts/_contacts.scss
@@ -4,12 +4,23 @@
     display: flex;
     gap: 32px;
   }
+
+  &__title {
+    margin-bottom: 16px;
+  }
+
+  &__form-field {
+    margin-bottom: 16px;
+  }
+
+  &__button {
+    display: block;
+    margin: 0 auto 16px;
+  }
+
   &__map {
     flex-shrink: 0;
     border-radius: 16px;
     border: none;
-  }
-  &__title {
-    margin-bottom: 16px;
   }
 }
