--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  padding: 20px 0;
+  padding: 20px;
   top: 0;
   left: 0;
   right: 0;
@@ -24,17 +24,21 @@
   max-width: 880px;
   height: 100%;
   max-height: 880px;
-  padding: 128px;
+  padding: 48px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
-}
 
-.modal-btn-close {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  border: none;
-  background: none;
-  cursor: pointer;
+  @media screen and (min-width: $bp-tablet) {
+    padding: 128px;
+  }
+
+  &__btn-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
 }
